[gd_scene load_steps=5 format=3 uid="uid://b5ghffcqwtenl"]

[ext_resource type="Script" path="res://src/npc/door.gd" id="1_c7jrw"]
[ext_resource type="Texture2D" uid="uid://ee1atx56ny05" path="res://resources/images/tiles/door.png" id="1_orlpo"]
[ext_resource type="Texture2D" uid="uid://chpnarkwwdo15" path="res://resources/images/ui/door_ui.png" id="3_iafyx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yosem"]
size = Vector2(40, 40)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_c7jrw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_orlpo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yosem")

[node name="DirectionUI" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -32)
texture = ExtResource("3_iafyx")
hframes = 3

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
